--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -53,6 +53,8 @@ body {
         flex-direction: column;
         width: auto;
         height: auto;
+        box-shadow: 0px 8px 10px rgba(5, 5, 5, .7);
+        border-radius: 3px;
     }
 }
 
